# HandsOff

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  build-redroid.sh  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: build-redroid.yml  build-server.yml
docs/: installation.md
droidrun-pkg/: pyproject.toml
droidrun-pkg/droidrun/: __init__.py  portal.py
droidrun-pkg/droidrun/tools/driver/: __init__.py
redroid-script/: redroid.py
redroid-script/stuff/: droidrun_portal.py  gboard.py  gen_lawnchair_prefs.py  gms_perms.py  heliboard.py  lawnchair.py  locale.py  magisk.py  skip_setup.py
server/: Dockerfile  app.py  config.py  device.py  ime.py  instructions.py  main.py  mcp_server.py  power.py  pyproject.toml  requirements.txt  services.py
server/tools/: __init__.py  adb.py  appstore.py  files.py  interaction.py  observation.py  playstore.py  power.py  services.py
skills/handsoff-core/: SKILL.md
