[project]
name = "handsoff-server"
version = "0.1.0"
description = "HandsOff MCP server for AI agent device control"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "mcp>=1.26.0",
    "Pillow>=10.0.0",
    "docker>=7.0.0",
    "kubernetes>=29.0.0",
    "gplaydl>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
